--- a/src/css/master.css
+++ b/src/css/master.css
@@ -1,17 +1,17 @@
 body {
   margin: 60px auto;
-  font-family: "Nunito", sans-serif;
+  font-family: 'Roboto Mono', monospace;
   height: auto;
-
+  font-weight: 100;
   padding-left: 1em;
   text-align: center;
   background-color: #ffffff;
 }
 nav ul,
 footer ul {
-  font-family: "Nunito", sans-serif;
+  font-family: 'Roboto Mono', monospace;
   list-style: none;
-  font-weight: bold;
+  
 }
 
 .navtitle {
@@ -20,21 +20,22 @@ footer ul {
 
   padding: 0.2em;
   font-size: 2em;
-  font-weight: 900;
+  font-weight: 400;
   font-family: "DM Serif Text", serif;
-  color: #1f271b;
+  color: #063831;
 }
 nav ul li,
 footer ul li {
   display: inline;
   margin-right: 20px;
+  margin-bottom: 0px;
 }
 nav a {
-  color: #1f271b;
+  color: #063831;
 }
 a {
   text-decoration: none;
-  color: #1f271b;
+  color: #063831;
 }
 a:hover {
   text-decoration: underline;
@@ -42,26 +43,35 @@ a:hover {
 h1 {
   font-size: 3em;
   font-family: "DM Serif Text", serif;
-                                                
-  font-weight: 900;
-  color: #1f271b;
+                   margin-bottom: 0em;                             
+  font-weight: 400;
+  color: #063831;
 }
 h2 {
-  font-size: 2em;
-  font-weight: 900;
+  font-size: 1.5em;
+  font-weight: 400;
   font-family: "DM Serif Text", serif;
                                                 
-  color: #1f271b;
+  color: #063831
 }
 h3 {
-  font-size: 1.2em;
+  font-size: 1em;
   color: #1f271b;
+ 
 }
 .poster {
   width: 60%;
 }
 .container {
   padding-top: 1em;
+}
+
+.skills{
+  width: 50%;
+  color:rgb(19, 100, 53);
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .values {
@@ -73,6 +83,7 @@ h3 {
 
 .values div {
   margin: 1em auto;
+  width: 10em;
 }
 
 p {
@@ -88,6 +99,10 @@ z-index: 99;
   left: 0px;
   width: 100%;
   top: 0px;
+}
+
+.project_img{
+  width: 400px;
 }
 
 footer {
@@ -123,6 +138,10 @@ ul.posts li {
   margin-right: auto;
 }
 
+.left{
+  text-align: left;
+}
+
 .githublink {
   position: absolute;
   right: 0px;
@@ -153,8 +172,52 @@ ul.posts li {
   right: 3em;
   top: 1.5em;
 }
-.twtlink {
-  position: absolute;
-  right: 6em;
-  top: 1.5em;
+
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
 }
+
+.flex-container > div {
+  
+  margin: 10px;
+  text-align: center;
+  line-height: 75px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 30px;
+}
+
+
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+  
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  border-radius: 10px;
+  font-size: 12px;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {border-radius: 10px; background-color: rgb(218, 227, 212);}
+
+.dropdown:hover .dropdown-content {display: block;}
